update sunstone-server.conf for opennebula 5

--- a/templates/sunstone-server.conf.erb
+++ b/templates/sunstone-server.conf.erb
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------------- #
-# Copyright 2002-2015, OpenNebula Project, OpenNebula Systems                #
+# Copyright 2002-2016, OpenNebula Project, OpenNebula Systems                #
 #                                                                            #
 # Licensed under the Apache License, Version 2.0 (the "License"); you may    #
 # not use this file except in compliance with the License. You may obtain    #
@@ -66,6 +66,16 @@
 #
 :debug_level: <%= @debug_level %>
 
+<% if scope.lookupvar('one::version_gte_5_0') -%>
+################################################################################
+# Proxy
+################################################################################
+
+# Enable an http proxy for the support portal and to download MarketPlaceApps
+# from the MarketPlace to the user's desktop.
+# :proxy: http://<hostname>:<port>
+<% end -%>
+
 ################################################################################
 # Auth
 ################################################################################
@@ -75,6 +85,9 @@
 #   x509, for x509 certificates based authentication
 #   opennebula, the authentication will be done by the opennebula core using the
 #   driver defined for the user
+<% if scope.lookupvar('one::version_gte_5_0') -%>
+#   remote: performs the login based on a Kerberos REMOTE_USER
+<% end -%>
 #
 :auth: opennebula
 
@@ -84,12 +97,23 @@
 #
 :core_auth: cipher
 
-# For LDAP auth. Encode credentials sent to OpenNebula. Turns espaces into %20.
+# For external authentication drivers, such as LDAP. Performs a URL encoding
+# on the credentials sent to OpenNebula, e.g. secret%20password
 # This only works with "opennebula" auth.
 #
 # :encode_user_password: true
 <% if scope.lookupvar('one::ldap') -%>
 :encode_user_password: true
+<% end -%>
+
+<% if scope.lookupvar('one::version_gte_5_0') -%>
+################################################################################
+# Check Upgrades
+################################################################################
+
+# To check for the latest release. Comment this value if you don't want to check
+# this.
+:remote_version: http://downloads.opennebula.org/latest
 <% end -%>
 
 ################################################################################
@@ -103,11 +127,21 @@
 #   vnc_proxy_cert: Certificate to encrypt wss connections.
 #   vnc_proxy_key:  Key for wss connections. Only necessary if not included in cert.
 #   vnc_proxy_ipv6: Enable ipv6 support for novnc-server
+<% if scope.lookupvar('one::version_gte_5_0') -%>
+#
+# :vnc_request_password: true | false
+#   Request VNC password for external windows, by default it will not be requested
+#
+<% end -%>
 :vnc_proxy_port: <%= @vnc_proxy_port %>
 :vnc_proxy_support_wss: <%= @vnc_proxy_support_wss %>
 :vnc_proxy_cert: <%= @vnc_proxy_cert %>
 :vnc_proxy_key: <%= @vnc_proxy_key %>
 :vnc_proxy_ipv6: <%= @vnc_proxy_ipv6 %>
+<% if scope.lookupvar('one::version_gte_5_0') -%>
+:vnc_request_password: false
+<% end -%>
+
 
 
 # Default language setting
@@ -140,7 +174,7 @@
 #
 :oneflow_server: http://localhost:2474/
 
-
+<% if not scope.lookupvar('one::version_gte_5_0') -%>
 ################################################################################
 # Default instance types for the cloud view
 ################################################################################
@@ -183,7 +217,7 @@
       :vcpu: 8
       :memory: 8192
       :description: General purpose instance for high-load servers
-
+<% end -%>
 ################################################################################
 # Routes
 ################################################################################
