update sunstone-views.yaml for opennebula 5

--- a/templates/sunstone-views.yaml.erb
+++ b/templates/sunstone-views.yaml.erb
@@ -2,7 +2,11 @@
 <% if scope.lookupvar('one::sunstone_logo_png') != 'undef' -%>
 logo: images/custom_logo.png
 <% else -%>
+<% if scope.lookupvar('one::version_gte_5_0') -%>
+logo: images/opennebula-5.0.png
+<% else -%>
 logo: images/opennebula-sunstone-v4.0.png
+<% end -%>
 <% end -%>
 <% if not scope.lookupvar('one::version_gte_4_14') -%>
 available_tabs:
@@ -46,3 +50,8 @@ groups:
         - cloud_vcenter
 default:
     - cloud
+<% if scope.lookupvar('one::version_gte_5_0') -%>
+default_groupadmin:
+    - groupadmin
+    - cloud
+<% end -%>
