changes to 5.8 oned.conf

--- a/templates/5.8/oned.conf.erb
+++ b/templates/5.8/oned.conf.erb
@@ -6,9 +6,12 @@
 # Daemon configuration attributes
 #-------------------------------------------------------------------------------
 #  MANAGER_TIMER: Time in seconds the core uses to evaluate periodical functions.
-#  MONITORING_INTERVAL cannot have a smaller value than MANAGER_TIMER.
+#  MONITORING_INTERVALS cannot have a smaller value than MANAGER_TIMER.
 #
-#  MONITORING_INTERVAL: Time in seconds between host and VM monitorization.
+#  MONITORING_INTERVAL_HOST: Time in seconds between host monitorization.
+#  MONITORING_INTERVAL_VM: Time in seconds between VM monitorization.
+#  MONITORING_INTERVAL_MARKET: Time in seconds between market monitorization.
+#  MONITORING_INTERVAL_DATASTORE: Time in seconds between image monitorization.
 #
 #  MONITORING_THREADS: Max. number of threads used to process monitor messages
 #
