--- a/templates/5.8/oned.conf.erb
+++ b/templates/5.8/oned.conf.erb
@@ -108,6 +108,16 @@ VNC_PORTS = [
 #    RESERVED = "6800, 6801, 6810:6820, 9869"
 ]
 
+#*******************************************************************************
+# API configuration attributes
+#-------------------------------------------------------------------------------
+#  VM_SUBMIT_ON_HOLD: Forces VMs to be created on hold state instead of pending.
+#  Values: YES or NO.
+#  API_LIST_ORDER: Sets order (by ID) of elements in list API calls.
+#  Values: ASC (ascending order) or DESC (descending order)
+#*******************************************************************************
+#
+#API_LIST_ORDER = "DESC"
 VM_SUBMIT_ON_HOLD = "<%= scope.lookupvar('one::oned::config::oned_vm_submit_on_hold') %>"
 
 #*******************************************************************************
@@ -132,6 +142,7 @@ VM_SUBMIT_ON_HOLD = "<%= scope.lookupvar('one::oned::config::oned_vm_submit_on_h
 #
 #
 #   RAFT: Algorithm attributes
+#     LIMIT_PURGE: Number of logs that will be deleted on each purge.
 #     LOG_RETENTION: Number of DB log records kept, it determines the
 #     synchronization window across servers and extra storage space needed.
 #     LOG_PURGE_TIMEOUT: How often applied records are purged according the log
@@ -139,7 +150,8 @@ VM_SUBMIT_ON_HOLD = "<%= scope.lookupvar('one::oned::config::oned_vm_submit_on_h
 #     ELECTION_TIMEOUT_MS: Timeout to start a election process if no heartbeat
 #     or log is received from leader.
 #     BROADCAST_TIMEOUT_MS: How often heartbeats are sent to  followers.
-#     XMLRPC_TIMEOUT_MS: To timeout raft related API calls
+#     XMLRPC_TIMEOUT_MS: To timeout raft related API calls. To set an infinite
+#     timeout set this value to 0.
 #
 #   RAFT_LEADER_HOOK: Executed when a server transits from follower->leader
 #     The purpose of this hook is to configure the Virtual IP.
@@ -167,11 +179,12 @@ FEDERATION = [
 ]
 
 RAFT = [
-    LOG_RETENTION        = 500000,
-    LOG_PURGE_TIMEOUT    = 600,
-    ELECTION_TIMEOUT_MS  = 2500,
+    LIMIT_PURGE          = 100000,
+    LOG_RETENTION        = 250000,
+    LOG_PURGE_TIMEOUT    = 60,
+    ELECTION_TIMEOUT_MS  = 5000,
     BROADCAST_TIMEOUT_MS = 500,
-    XMLRPC_TIMEOUT_MS    = 2000
+    XMLRPC_TIMEOUT_MS    = 1000
 ]
 
 # Executed when a server transits from follower->leader
