--- a/templates/5.8/oned.conf.erb
+++ b/templates/5.8/oned.conf.erb
@@ -398,7 +398,7 @@ IM_MAD = [
       NAME          = "kvm",
       SUNSTONE_NAME = "KVM",
       EXECUTABLE    = "one_im_ssh",
-      ARGUMENTS     = "-r 3 -t 15 kvm" ]
+      ARGUMENTS     = "-r 3 -t 15 -w 90 kvm" ]
 #-------------------------------------------------------------------------------
 
 #-------------------------------------------------------------------------------
@@ -411,7 +411,33 @@ IM_MAD = [
 #       NAME          = "kvm",
 #       SUNSTONE_NAME = "kvm-ssh",
 #       EXECUTABLE    = "one_im_ssh",
-#       ARGUMENTS     = "-r 3 -t 15 kvm-probes" ]
+#       ARGUMENTS     = "-r 3 -t 15 -w 90 kvm-probes" ]
+#-------------------------------------------------------------------------------
+
+#-------------------------------------------------------------------------------
+#  LXD UDP-push Information Driver Manager Configuration
+#    -r number of retries when monitoring a host
+#    -t number of threads, i.e. number of hosts monitored at the same time
+#    -w Timeout in seconds to execute external commands (default unlimited)
+#-------------------------------------------------------------------------------
+IM_MAD = [
+      NAME          = "lxd",
+      SUNSTONE_NAME = "LXD",
+      EXECUTABLE    = "one_im_ssh",
+      ARGUMENTS     = "-r 3 -t 15 -w 90 lxd" ]
+#-------------------------------------------------------------------------------
+
+#-------------------------------------------------------------------------------
+#  LXD SSH-pull Information Driver Manager Configuration
+#    -r number of retries when monitoring a host
+#    -t number of threads, i.e. number of hosts monitored at the same time
+#    -w Timeout in seconds to execute external commands (default unlimited)
+#-------------------------------------------------------------------------------
+# IM_MAD = [
+#       NAME          = "lxd",
+#       SUNSTONE_NAME = "lxd-ssh",
+#       EXECUTABLE    = "one_im_ssh",
+#       ARGUMENTS     = "-r 3 -t 15 -w 90 lxd-probes" ]
 #-------------------------------------------------------------------------------
 
 #-------------------------------------------------------------------------------
