--- a/templates/5.8/oned.conf.erb
+++ b/templates/5.8/oned.conf.erb
@@ -480,6 +480,18 @@ IM_MAD = [
 #-------------------------------------------------------------------------------
 
 #-------------------------------------------------------------------------------
+#  Hybrid OpenNebula Information Driver Manager Configuration
+#    -r number of retries when monitoring a host
+#    -t number of threads, i.e. number of hosts monitored at the same time
+#-------------------------------------------------------------------------------
+# IM_MAD = [
+#       NAME          = "one",
+#       SUNSTONE_NAME = "OpenNebula",
+#       EXECUTABLE    = "one_im_sh",
+#       ARGUMENTS     = "-c -t 1 -r 0 one" ]
+#-------------------------------------------------------------------------------
+
+#-------------------------------------------------------------------------------
 #  Dummy Information Driver Manager Configuration
 #-------------------------------------------------------------------------------
 #IM_MAD = [ NAME="dummy", SUNSTONE_NAME="Testing", EXECUTABLE="one_im_dummy"]
