--- a/templates/5.8/oned.conf.erb
+++ b/templates/5.8/oned.conf.erb
@@ -1119,22 +1119,50 @@ VM_RESTRICTED_ATTR = "NIC/INBOUND_PEAK_KB"
 VM_RESTRICTED_ATTR = "NIC/OUTBOUND_AVG_BW"
 VM_RESTRICTED_ATTR = "NIC/OUTBOUND_PEAK_BW"
 VM_RESTRICTED_ATTR = "NIC/OUTBOUND_PEAK_KB"
-#VM_RESTRICTED_ATTR = "NIC/OPENNEBULA_MANAGED"
-#VM_RESTRICTED_ATTR = "NIC/VCENTER_INSTANCE_ID"
-#VM_RESTRICTED_ATTR = "NIC/VCENTER_NET_REF"
-#VM_RESTRICTED_ATTR = "NIC/VCENTER_PORTGROUP_TYPE"
+VM_RESTRICTED_ATTR = "NIC/OPENNEBULA_MANAGED"
+VM_RESTRICTED_ATTR = "NIC/VCENTER_INSTANCE_ID"
+VM_RESTRICTED_ATTR = "NIC/VCENTER_NET_REF"
+VM_RESTRICTED_ATTR = "NIC/VCENTER_PORTGROUP_TYPE"
+VM_RESTRICTED_ATTR = "NIC/EXTERNAL"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/MAC"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/VLAN_ID"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/BRIDGE"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/INBOUND_AVG_BW"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/INBOUND_PEAK_BW"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/INBOUND_PEAK_KB"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/OUTBOUND_AVG_BW"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/OUTBOUND_PEAK_BW"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/OUTBOUND_PEAK_KB"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/OPENNEBULA_MANAGED"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/VCENTER_INSTANCE_ID"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/VCENTER_NET_REF"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/VCENTER_PORTGROUP_TYPE"
+VM_RESTRICTED_ATTR = "NIC_ALIAS/EXTERNAL"
 VM_RESTRICTED_ATTR = "NIC_DEFAULT/MAC"
 VM_RESTRICTED_ATTR = "NIC_DEFAULT/VLAN_ID"
 VM_RESTRICTED_ATTR = "NIC_DEFAULT/BRIDGE"
+VM_RESTRICTED_ATTR = "NIC_DEFAULT/EXTERNAL"
 VM_RESTRICTED_ATTR = "DISK/TOTAL_BYTES_SEC"
+VM_RESTRICTED_ATTR = "DISK/TOTAL_BYTES_SEC_MAX_LENGTH"
+VM_RESTRICTED_ATTR = "DISK/TOTAL_BYTES_SEC_MAX"
 VM_RESTRICTED_ATTR = "DISK/READ_BYTES_SEC"
+VM_RESTRICTED_ATTR = "DISK/READ_BYTES_SEC_MAX_LENGTH"
+VM_RESTRICTED_ATTR = "DISK/READ_BYTES_SEC_MAX"
 VM_RESTRICTED_ATTR = "DISK/WRITE_BYTES_SEC"
+VM_RESTRICTED_ATTR = "DISK/WRITE_BYTES_SEC_MAX_LENGTH"
+VM_RESTRICTED_ATTR = "DISK/WRITE_BYTES_SEC_MAX"
 VM_RESTRICTED_ATTR = "DISK/TOTAL_IOPS_SEC"
+VM_RESTRICTED_ATTR = "DISK/TOTAL_IOPS_SEC_MAX_LENGTH"
+VM_RESTRICTED_ATTR = "DISK/TOTAL_IOPS_SEC_MAX"
 VM_RESTRICTED_ATTR = "DISK/READ_IOPS_SEC"
+VM_RESTRICTED_ATTR = "DISK/READ_IOPS_SEC_MAX_LENGTH"
+VM_RESTRICTED_ATTR = "DISK/READ_IOPS_SEC_MAX"
 VM_RESTRICTED_ATTR = "DISK/WRITE_IOPS_SEC"
-#VM_RESTRICTED_ATTR = "DISK/OPENNEBULA_MANAGED"
-#VM_RESTRICTED_ATTR = "DISK/VCENTER_DS_REF"
-#VM_RESTRICTED_ATTR = "DISK/VCENTER_INSTANCE_ID"
+VM_RESTRICTED_ATTR = "DISK/WRITE_IOPS_SEC_MAX_LENGTH"
+VM_RESTRICTED_ATTR = "DISK/WRITE_IOPS_SEC_MAX"
+VM_RESTRICTED_ATTR = "DISK/OPENNEBULA_MANAGED"
+VM_RESTRICTED_ATTR = "DISK/VCENTER_DS_REF"
+VM_RESTRICTED_ATTR = "DISK/VCENTER_INSTANCE_ID"
 #VM_RESTRICTED_ATTR = "DISK/SIZE"
 VM_RESTRICTED_ATTR = "DISK/ORIGINAL_SIZE"
 VM_RESTRICTED_ATTR = "DISK/SIZE_PREV"
@@ -1148,7 +1176,8 @@ VM_RESTRICTED_ATTR = "USER_PRIORITY"
 VM_RESTRICTED_ATTR = "USER_INPUTS/CPU"
 VM_RESTRICTED_ATTR = "USER_INPUTS/MEMORY"
 VM_RESTRICTED_ATTR = "USER_INPUTS/VCPU"
-#VM_RESTRICTED_ATTR = "TEMPLATE/VCENTER_VM_FOLDER"
+VM_RESTRICTED_ATTR = "VCENTER_VM_FOLDER"
+VM_RESTRICTED_ATTR = "VCENTER_ESX_HOST"
 
 #VM_RESTRICTED_ATTR = "RANK"
 #VM_RESTRICTED_ATTR = "SCHED_RANK"
@@ -1156,7 +1185,7 @@ VM_RESTRICTED_ATTR = "USER_INPUTS/VCPU"
 #VM_RESTRICTED_ATTR = "SCHED_REQUIREMENTS"
 
 IMAGE_RESTRICTED_ATTR = "SOURCE"
-#IMAGE_RESTRICTED_ATTR = "TEMPLATE/VCENTER_IMPORTED"
+IMAGE_RESTRICTED_ATTR = "VCENTER_IMPORTED"
 
 #*******************************************************************************
 # The following restricted attributes only apply to VNets that are a reservation.
