changes to admin template

--- a/templates/5.8/sunstone-views-admin.yaml.erb
+++ b/templates/5.8/sunstone-views-admin.yaml.erb
@@ -124,11 +124,11 @@ tabs:
             Dashboard.refresh: false
             Sunstone.toggle_top: false
         widgets_one_per_row:
-            - vms
             - hosts
-            - users
         widgets_three_per_row:
         widgets_two_per_row:
+            - vms
+            - users
             - storage
             - network
         widgets_one_footer:
@@ -262,6 +262,8 @@ tabs:
             Template.delete_dialog: true
             Template.share: true
             Template.unshare: true
+            Template.lockU: true
+            Template.unlock: true
             Template.edit_labels: true
             Template.menu_labels: true
         template_creation_tabs:
