--- a/templates/5.8/sunstone-views-cloud.yaml.erb
+++ b/templates/5.8/sunstone-views-cloud.yaml.erb
@@ -17,12 +17,10 @@ features:
     # on the VM creation dialog
     secgroups: true
 
-    # True to hide the CPU setting in the VM creation dialog. The CPU setting
-    # will be set to the same value as VCPU, that will still be visible for the
-    # end users
+    # True to hide the CPU setting in the VM creation dialog
     instantiate_hide_cpu: false
 
-    # False to not scale the CPU. Number [0, 1] to scale from VCPU
+    # False to not scale the CPU. Number to scale from VCPU
     instantiate_cpu_factor: false
 
     # True to show the option to make an instance persistent
@@ -30,6 +28,20 @@ features:
 
     # True to allow to create machines to cloud users
     cloud_vm_create: true
+
+    # True to show the monitoring info (VM & VRouters)
+    show_monitoring_info: true
+
+    # True to show the attributes info (VM & VRouters)
+    show_attributes_info: true
+
+    # True to show the vCenter info (VM & VRouters)
+    show_vcenter_info: true
+
+    # True to show advanced options
+    show_attach_disk_advanced: true
+
+    show_attach_nic_advanced: true
 tabs:
     provision-tab:
         panel_tabs:
