--- a/templates/5.8/sunstone-views-cloud.yaml.erb
+++ b/templates/5.8/sunstone-views-cloud.yaml.erb
@@ -46,12 +46,12 @@ tabs:
     provision-tab:
         panel_tabs:
             vm_info_tab: false
-            vm_capacity_tab: false
-            vm_storage_tab: false
-            vm_network_tab: false
-            vm_snapshot_tab: false
+            vm_capacity_tab: true
+            vm_storage_tab: true
+            vm_network_tab: true
+            vm_snapshot_tab: true
             vm_placement_tab: false
-            vm_actions_tab: false
+            vm_actions_tab: true
             vm_conf_tab: false
             vm_template_tab: false
             vm_log_tab: false
@@ -76,19 +76,23 @@ tabs:
             VM.undeploy_hard: false
             VM.terminate: true
             VM.terminate_hard: true
-            VM.resize: false
-            VM.attachdisk: false
-            VM.detachdisk: false
-            VM.disk_saveas: false
-            VM.attachnic: false
-            VM.detachnic: false
-            VM.snapshot_create: false
-            VM.snapshot_revert: false
-            VM.snapshot_delete: false
-            VM.disk_snapshot_create: false
-            VM.disk_snapshot_revert: false
-            VM.disk_snapshot_delete: false
+            VM.resize: true
+            VM.disk_resize: true
+            VM.attachdisk: true
+            VM.detachdisk: true
+            VM.disk_saveas: true
+            VM.attachnic: true
+            VM.detachnic: true
+            VM.snapshot_create: true
+            VM.snapshot_revert: true
+            VM.snapshot_delete: true
+            VM.disk_snapshot_create: true
+            VM.disk_snapshot_revert: true
+            VM.disk_snapshot_rename: true
+            VM.disk_snapshot_delete: true
             VM.save_as_template: true
+            VM.lockU: true
+            VM.unlock: true
         dashboard:
             # Connected user's quotas
             quotas: true
