--- a/templates/5.8/sunstone-views-user.yaml.erb
+++ b/templates/5.8/sunstone-views-user.yaml.erb
@@ -8,6 +8,7 @@ link_logo:
 text_link_logo:
 confirm_vms: false
 filter-view: true
+do_count_animation: true
 enabled_tabs:
     - dashboard-tab
     - instances-top-tab
@@ -28,6 +29,7 @@ enabled_tabs:
 <% end -%>
     - network-top-tab
     - vnets-tab
+    - vnets-templates-tab
     - vnets-topology-tab
     - secgroups-tab
     #- infrastructure-top-tab
@@ -44,6 +46,7 @@ enabled_tabs:
     #- upgrade-top-tab
     - vmgroup-tab
 features:
+
     # True to show showback monthly reports, and VM cost
     showback: true
 
@@ -51,12 +54,10 @@ features:
     # on the VM creation dialog
     secgroups: true
 
-    # True to hide the CPU setting in the VM creation dialog. The CPU setting
-    # will be set to the same value as VCPU, that will still be visible for the
-    # end users
+    # True to hide the CPU setting in the VM creation dialog
     instantiate_hide_cpu: false
 
-    # False to not scale the CPU. Number [0, 1] to scale from VCPU
+    # False to not scale the CPU. Number to scale from VCPU
     instantiate_cpu_factor: false
 
     # True to show the option to make an instance persistent
@@ -74,9 +75,29 @@ features:
     # True to show the host datatable to instantiate VM
     show_host_instantiate: false
 
+    # True to show context section to instantiate Network
+    show_context_instantiate_vnet: true
+
+    # True to show context section to instantiate Network
+    show_security_instantiate_vnet: true
+
     # True to show an input to specify the the VMs and Template path/folder where a vCenter VM will
     # deployed to
     vcenter_vm_folder: false
+
+    # True to show the monitoring info (VM & VRouters)
+    show_monitoring_info: true
+
+    # True to show the attributes info (VM & VRouters)
+    show_attributes_info: true
+
+    # If it is set to true, the host capacity will be checked. This will only affect oneadmin requests,
+    # regular users resize requests will always be enforced
+    resize_enforce: false
+
+    deploy_enforce: false
+
+    migrate_enforce: false
 tabs:
     dashboard-tab:
         # The following widgets can be used inside any of the '_per_row' settings
@@ -231,6 +252,8 @@ tabs:
             Template.clone_dialog: true
             Template.delete_dialog: true
             Template.share: true
+            Template.lockU: true
+            Template.unlock: true
             Template.unshare: true
             Template.edit_labels: true
             Template.menu_labels: true
@@ -378,11 +401,14 @@ tabs:
             VM.snapshot_delete: true
             VM.disk_snapshot_create: true
             VM.disk_snapshot_revert: true
+            VM.disk_snapshot_rename: true
             VM.disk_snapshot_delete: true
             VM.resched: false
             VM.unresched: false
             VM.save_as_template: true
             VM.updateconf: true
+            VM.lockU: true
+            VM.lockU: true
             VM.edit_labels: true
             VM.menu_labels: true
     oneflow-services-tab:
@@ -465,6 +491,8 @@ tabs:
             VirtualRouter.delete: true
             VirtualRouter.attachnic: true
             VirtualRouter.detachnic: true
+            VirtualRouter.lockU: true
+            VirtualRouter.unlock: true
             VirtualRouter.edit_labels: true
             VirtualRouter.menu_labels: true
     infrastructure-top-tab:
@@ -620,6 +648,8 @@ tabs:
             Image.snapshot_flatten: true
             Image.snapshot_revert: true
             Image.snapshot_delete: true
+            Image.lockU: true
+            Image.unlock: true
             Image.edit_labels: true
             Image.menu_labels: true
     files-tab:
@@ -678,6 +708,8 @@ tabs:
             MarketPlace.chgrp: true
             MarketPlace.chmod: true
             MarketPlace.delete: true
+            MarketPlace.lockU: true
+            MarketPlace.unlock: true
             MarketPlace.edit_labels: true
             MarketPlace.menu_labels: true
     marketplaceapps-tab:
@@ -754,8 +786,46 @@ tabs:
             Network.add_ar: false
             Network.remove_ar: true
             Network.update_ar: true
+            Network.lockU: true
+            Network.unlock: true
             Network.edit_labels: true
             Network.menu_labels: true
+    vnets-templates-tab:
+        panel_tabs:
+            vnet_template_info_tab: true
+            vnet_template_ar_list_tab: true
+            vnet_template_sg_list_tab: true
+            vnet_template_clusters_tab: true
+            vnet_template_template_tab: true
+        table_columns:
+            - 0         # Checkbox
+            - 1         # ID
+            - 2         # Name
+            - 3         # Owner
+            - 4         # Group
+            - 6         # Cluster
+            #- 10       # Labels
+            #- 11       # Search data
+        actions:
+            VNTemplate.refresh: true
+            VNTemplate.create_dialog: false
+            VNTemplate.instantiate_vnets: true
+            VNTemplate.update_dialog: true
+            VNTemplate.rename: true
+            VNTemplate.chown: true
+            VNTemplate.chgrp: true
+            VNTemplate.chmod: true
+            VNTemplate.delete: true
+            VNTemplate.hold_lease: true
+            VNTemplate.release_lease: true
+            VNTemplate.add_ar: true
+            VNTemplate.remove_ar: true
+            VNTemplate.update_ar: true
+            VNTemplate.update: true
+            VNTemplate.lockU: true
+            VNTemplate.unlock: true
+            VNTemplate.edit_labels: true
+            VNTemplate.menu_labels: true
     vnets-topology-tab:
         panel_tabs:
         actions:
@@ -843,3 +913,5 @@ tabs:
            VMGroup.chmod: true
            VMGroup.chown: true
            VMGroup.chgrp: true
+           VMGroup.lockU: true
+           VMGroup.unlock: true
