oversights in config parameters

--- a/templates/5.8/sunstone-server.conf.erb
+++ b/templates/5.8/sunstone-server.conf.erb
@@ -104,7 +104,7 @@
 # UI Settings
 ################################################################################
 # :vnc_proxy_
-#   port:           port where the vnc proxy will listen
+#   port:           port where the vnc proxy will listen. Could be prefixed with an address on which the sever will be listening (ex: 127.0.0.1:29876).
 #   support_wss:    no | yes | only. For yes and only, provide path to
 #                   cert and key. "yes" means both ws and wss connections will be
 #                   supported.
