--- a/templates/5.8/sunstone-views-user.yaml.erb
+++ b/templates/5.8/sunstone-views-user.yaml.erb
@@ -408,7 +408,7 @@ tabs:
             VM.save_as_template: true
             VM.updateconf: true
             VM.lockU: true
-            VM.lockU: true
+            VM.unlock: true
             VM.edit_labels: true
             VM.menu_labels: true
     oneflow-services-tab:
